Personal Context Service core service clients
Bug: 434644900
Test: MANUAL - Builds, boots, logs on service startup with flag enabled,
      does not throw any new errors with flag disabled
Flag: android.service.personalcontext.enable_personal_context_service

Change-Id: I6a6a6964d32451d4367bc5f2c5baa18281f46768